# organization-management-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  linter_config.flake8  pyproject.toml  requirements.txt
env/: dev.env  local.env  prod.env
src/organization_management_backend_service/: _exceptions.py  main.py
src/organization_management_backend_service/api/v1/endpoints/: oms.py
src/organization_management_backend_service/core/: config.py
src/organization_management_backend_service/dao/: base_dao.py  oms_dao.py
src/organization_management_backend_service/db/: db_connector.py  query_parser.py
src/organization_management_backend_service/logger/: filters.py  formatters.py  logger.py
src/organization_management_backend_service/models/: base_model.py  oms_models.py
src/organization_management_backend_service/schemas/: oms_schemas.py
src/organization_management_backend_service/services/: dependencies.py  oms_service.py
src/organization_management_backend_service/utils/: fastapi_globals.py  method_logger.py  middlewares.py  serialization.py  utils.py
tests/: conftest.py  test.py
